# lh-to-coq

./: .gitignore  LICENSE  Makefile.local  README.md  _CoqProject  coq-demo.opam  coq-depexts-test.opam  lh-to-coq.cabal  lh-to-coq.opam  package.yaml  stack.yaml  tesh.sh  test.sh
.github/workflows/: build-coq-demo.yml  coq-test.yml
app/: Main.hs
coq/: Ack.v
lh-examples/: Fact.hs  Simple.hs  lh-examples.cabal  package.yaml
lh-examples/todo/: Ack.hs  Ack0.hs  Fact.hs  GCD.hs  MergeSort.hs
src/: Coq.hs  CoreToLH.hs  LH.hs  LHToCoq.hs  Preamble.hs  Simplify.hs  SpecToLH.hs  Translate.hs  Util.hs
